// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f"
    />
    <input
        className="g b c h i j k l m n o p q r s t"
        maxLength={1}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{flex-wrap:wrap}
    .g{display:inline}
    .h{white-space:pre-wrap}
    .i{overflow-wrap:break-word}
    .j{-ms-hyphens:auto}
    .k{color:blue}
    .l{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .m{font-size:16}
    .n{line-height:24px}
    .o{text-align:left}
    .p{font-weight:normal}
    .q{font-style:normal}
    .r::placeholder{color:rgba(0, 0, 255, 0.5)}
    .s{background-color:transparent}
    .t{outline:none}",
}
`;

exports[`disabled 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f"
    />
    <input
        className="g b c h i j k l m n o p q r s t u"
        disabled={true}
        maxLength={1}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{flex-wrap:wrap}
    .g{display:inline}
    .h{opacity:0.5}
    .i{white-space:pre-wrap}
    .j{overflow-wrap:break-word}
    .k{-ms-hyphens:auto}
    .l{color:black}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p{text-align:left}
    .q{font-weight:normal}
    .r{font-style:normal}
    .s::placeholder{color:rgba(0, 0, 0, 0.5)}
    .t{background-color:transparent}
    .u{outline:none}",
}
`;

exports[`error 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f"
    >
        <div
            className="g b c h i j k l m n o p q"
        >
            error
        </div>
    </div>
    <input
        className="g b c h i j r l m n o s q t u v"
        maxLength={1}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{flex-wrap:wrap}
    .g{display:inline}
    .h{white-space:pre-wrap}
    .i{overflow-wrap:break-word}
    .j{-ms-hyphens:auto}
    .k{color:red}
    .l{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .m{font-size:16}
    .n{line-height:24px}
    .o{text-align:left}
    .p{font-weight:600}
    .q{font-style:normal}
    .r{color:black}
    .s{font-weight:normal}
    .t::placeholder{color:rgba(0, 0, 0, 0.5)}
    .u{background-color:transparent}
    .v{outline:none}",
}
`;

exports[`label 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f"
    >
        <div
            className="g b c h i j k l m n o p q"
        >
            label
        </div>
    </div>
    <input
        className="g b c h i j k l m n o r q s t u"
        maxLength={1}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{flex-wrap:wrap}
    .g{display:inline}
    .h{white-space:pre-wrap}
    .i{overflow-wrap:break-word}
    .j{-ms-hyphens:auto}
    .k{color:black}
    .l{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .m{font-size:16}
    .n{line-height:24px}
    .o{text-align:left}
    .p{font-weight:600}
    .q{font-style:normal}
    .r{font-weight:normal}
    .s::placeholder{color:rgba(0, 0, 0, 0.5)}
    .t{background-color:transparent}
    .u{outline:none}",
}
`;

exports[`render 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="a d c e f"
    />
    <input
        className="g b c h i j k l m n o p q r s t"
        maxLength={1}
    />
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{flex-direction:row}
    .e{margin-bottom:0}
    .f{flex-wrap:wrap}
    .g{display:inline}
    .h{white-space:pre-wrap}
    .i{overflow-wrap:break-word}
    .j{-ms-hyphens:auto}
    .k{color:black}
    .l{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .m{font-size:16}
    .n{line-height:24px}
    .o{text-align:left}
    .p{font-weight:normal}
    .q{font-style:normal}
    .r::placeholder{color:rgba(0, 0, 0, 0.5)}
    .s{background-color:transparent}
    .t{outline:none}",
}
`;
